# AI-SRE-Platform-for-Autonomous-Operations

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 357df49c7f3d_create_discovery_snapshots_table.py  4493fda53116_create_telemetry_metrics_table.py  5137e1311068_create_servers_table.py  89665d24d492_create_metrics_table.py  8dbc17948c07_create_incidents_tables.py  d911b1279f24_create_server_health_table.py  df7946e80bd4_create_inventory_table.py
docs/api/v1/: health.py
notes/: linux_collector_agent.md
scripts/: generate_embeddings.py  init_db.py
src/: main.py
src/application/discovery/: parsers.py
src/application/orchestrator/: __init__.py  collector_orchestrator.py  collector_registry.py
src/application/parsers/: __init__.py  cpu_parser.py  disk_parser.py  docker_parser.py  kubernetes_parser.py  log_parser.py  memory_parser.py  network_parser.py  service_parser.py  system_parser.py
src/application/services/: __init__.py  discovery_service.py  (+6 more)
src/domain/: __init__.py  exceptions.py
src/infrastructure/: database.py
src/shared/: constants.py  types.py  utils.py
tests/: conftest.py
tests/application/: test_discovery.py  test_incident.py  test_inventory.py  test_metric_service.py  test_monitoring.py  test_server_service.py  test_telemetry.py
tests/infrastructure/: test_connectors.py  test_logger.py  test_settings.py
tests/presentation/: test_incident_api.py  test_inventory_api.py  test_monitoring_api.py  test_telemetry_api.py
(+131 files in other folders)
